More work in generify Open NLP Adding Simple multi-line army splitter Catching then logging exceptions that are not handled adding tournment data for 2.2 Using longer NGrams for army book detection

--- a/README
+++ b/README
@@ -4,4 +4,4 @@ To build and run on windows:
 3. Open a terminal
   1. Change direectory to the folder contains this README, ie: cd /home/my_user/ninthageparser
   2. Execute the following command: `gradle.bat build run`
-4. Examine ./build/reports for the results of the parser
+4. Examine ./build/workspace for the results of the parser
